bug fix 动态表数据删除失败